--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg topNav">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" alt="logo">
+                <img src="assets/img/logo.png" alt="logo" height="50">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
@@ -39,19 +39,25 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 MenuList">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link active" href="#">Find Jobs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">Talent Search</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Find Jobs</a>
-                        </li> 
-
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Courses 
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li> 
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
                     </ul>
                     <div class="menu-login-btn align-self-center gap-3 d-flex">
-                        <a href="" class="theme-btn "> Posts a Jobs</a>
-                        <a href="" class="theme-btn">Register</a>
+                        <a href="" class="login-btn">Login</a>
                     </div>
                 </div>
             </div>
@@ -68,8 +74,10 @@
                             <!-- <span class="counter-value primary-c" data-count="2568"></span> -->
                             Your <span class="primary-c">Dream Job</span> Is Now At Your Fingertip
                         </div>
-                        <p class="pt-4 fs-3 ">Find great job for build your bright career. Have many job in this
-                            plactform.</p>
+                        <p class="pt-4 fs-3 ">
+                            <span class="counter-value primary-c" data-count="2565"></span>
+                             Jobs are available now. Find the right fit for yourself. 
+                             Embrace new chances.</p>
                         <div class="banner-form">
                             <a class="toggle" data-bs-toggle="collapse" href="#toggleInfo" role="button"
                                 aria-expanded="false" aria-controls="toggleInfo">
@@ -181,21 +189,22 @@
             <div class="row">
                 <div class="col-lg-6 align-self-center">
                     <div class="leader-home">
-                        <div class="h1 fw-bold text-white">Land on the Monthly Leaderboard</div>
-                        <div class="h4 pt-4 pb-5 text-white">Win exciting prizes including MacBook, <br> iPhone and
-                            Apple Watch.</div>
+                        <div class="h1 fw-bold text-white">Rank High On The Monthly Leaderboard</div>
+                        <div class="h4 pt-4 pb-5 text-white">
+                            The highest-quality candidates can be found here. <br/> In addition to your academic results, we value your experience and expertise.
+                        </div>
                         <a href="#" class="theme-btn btn-md">Learn More</a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 align-self-center">
                     <div class="leader-slid owl-carousel owl-theme">
                         <div class="leader-item-content">
                             <div class="leader-item bg-white text-center p-3 py-4">
                                 <div class="award">
-                                    <img src="assets/img/award.png" alt="">
+                                    1
                                 </div>
                                 <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
-                                <div class="h6 pt-3 pb-3">MD. Emam Hossain</div>
+                                <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
                                 <div class="reward-win">
@@ -205,10 +214,10 @@
                             </div>
                             <div class="leader-item bg-white text-center p-3 py-4">
                                 <div class="award">
-                                    <img src="assets/img/award.png" alt="">
+                                    2
                                 </div>
                                 <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
-                                <div class="h6 pt-3 pb-3">MD. Emam Hossain</div>
+                                <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
                                 <div class="reward-win">
@@ -218,10 +227,10 @@
                             </div>
                             <div class="leader-item bg-white text-center p-3 py-4">
                                 <div class="award">
-                                    <img src="assets/img/award.png" alt="">
+                                    3
                                 </div>
                                 <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
-                                <div class="h6 pt-3 pb-3">MD. Emam Hossain</div>
+                                <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
                                 <div class="reward-win">
@@ -233,10 +242,10 @@
                         <div class="leader-item-content">
                             <div class="leader-item bg-white text-center p-3 py-4">
                                 <div class="award">
-                                    <img src="assets/img/award.png" alt="">
+                                    1
                                 </div>
                                 <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
-                                <div class="h6 pt-3 pb-3">MD. Emam Hossain</div>
+                                <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
                                 <div class="reward-win">
@@ -246,10 +255,10 @@
                             </div>
                             <div class="leader-item bg-white text-center p-3 py-4">
                                 <div class="award">
-                                    <img src="assets/img/award.png" alt="">
+                                    2
                                 </div>
                                 <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
-                                <div class="h6 pt-3 pb-3">MD. Emam Hossain</div>
+                                <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
                                 <div class="reward-win">
@@ -259,10 +268,10 @@
                             </div>
                             <div class="leader-item bg-white text-center p-3 py-4">
                                 <div class="award">
-                                    <img src="assets/img/award.png" alt="">
+                                    3
                                 </div>
                                 <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
-                                <div class="h6 pt-3 pb-3">MD. Emam Hossain</div>
+                                <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
                                 <div class="reward-win">
@@ -408,7 +417,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="all-jobs-select">
-                        <select class="form-select"> 
+                        <select class="form-select">
                             <option value="1">All Jobs</option>
                             <option value="2">Part-Time</option>
                             <option value="3">Full-Time</option>
