--- a/manufacturing-jobs.html
+++ b/manufacturing-jobs.html
@@ -322,7 +322,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8 rightSidebar">
+                <div class="col-lg-8">
                     <div class="manufacturing-jobs-content">
                         <a href="manufacturing.html" class="manufacturing-jobs-item">
                             <div class="manufacturing-dd">
@@ -566,7 +566,7 @@
                         </a> 
                     </div>
                 </div>
-                <div class="col-lg-12 ">
+                <!-- <div class="col-lg-12 ">
                     <div class="pt-5 text-center">
                         <nav aria-label="Page navigation example">
                             <ul class="pagination justify-content-center">
@@ -586,7 +586,7 @@
                             </ul>
                         </nav>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
