--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-5 offset-lg-1 align-self-center">
                     <div class="banner-img">
                         <img src="assets/img/undraw_working_re_ddwy.svg" width="100%" alt="">
                     </div>
@@ -691,9 +691,9 @@
                     <div class="col-lg-12">
                         <div class="footer-widget-content">
                             <div class="footer-widget-item">
-                                <div class="footer-logo">
+                                <div class="footer-logo pb-4">
                                     <a href="index.html">
-                                        <img src="assets/img/logo.png" alt="">
+                                        <img src="assets/img/logo.png" alt="" height="50">
                                     </a>
                                 </div>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil dolores deserunt.
