--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <div class="h4 pt-4 pb-5 text-white">
                             The highest-quality candidates can be found here. <br/> In addition to your academic results, we value your experience and expertise.
                         </div>
-                        <a href="#" class="theme-btn btn-md">Learn More</a>
+                        <a href="leaderboard.html" class="theme-btn btn-md">Learn More</a>
                     </div>
                 </div>
                 <div class="col-lg-6 align-self-center">
