--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Courses 
+                                Courses
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li> 
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
@@ -76,8 +76,8 @@
                         </div>
                         <p class="pt-4 fs-3 ">
                             <span class="counter-value primary-c" data-count="2565"></span>
-                             Jobs are available now. Find the right fit for yourself. 
-                             Embrace new chances.</p>
+                            Jobs are available now. Find the right fit for yourself.
+                            Embrace new chances.</p>
                         <div class="banner-form">
                             <a class="toggle" data-bs-toggle="collapse" href="#toggleInfo" role="button"
                                 aria-expanded="false" aria-controls="toggleInfo">
@@ -191,11 +191,13 @@
                     <div class="leader-home">
                         <div class="h1 fw-bold text-white">Rank High On The Monthly Leaderboard</div>
                         <div class="h4 pt-4 pb-5 text-white">
-                            The highest-quality candidates can be found here. <br/> In addition to your academic results, we value your experience and expertise.
+                            The highest-quality candidates can be found here. <br /> In addition to your academic
+                            results, we value your experience and expertise.
                         </div>
                         <a href="leaderboard.html" class="theme-btn btn-md">Learn More</a>
                     </div>
                 </div>
+
                 <div class="col-lg-6 align-self-center">
                     <div class="leader-slid owl-carousel owl-theme">
                         <div class="leader-item-content">
@@ -574,7 +576,7 @@
         </div>
     </div>
 
-    <div class="hr-solutions-area section-bg pt-100">
+    <div class="hr-solutions-area section-bg py-100">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
@@ -584,7 +586,42 @@
                     </div>
                 </div>
             </div>
-            <div class="row pt-3">
+            <div class="row justify-content-center job-seeker-content">
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-job-seeker-card">
+                        <div class="seeker-image">
+                            <img src="assets/img/seeker/icon-4.png" alt="image">
+                        </div>
+                        <h3>Create Account</h3>
+                        <div class="step">Step 1</div>
+                    </div>
+                    <div class="seeker-arrow-icon">
+                        <img src="assets/img/seeker/arrow-1.png" alt="image">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-job-seeker-card">
+                        <div class="seeker-image">
+                            <img src="assets/img/seeker/icon.png" alt="image">
+                        </div>
+                        <h3>Submit Resume</h3>
+                        <div class="step">Step 2</div>
+                    </div>
+                    <div class="seeker-arrow-icon">
+                        <img src="assets/img/seeker/arrow2.png" alt="image">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-job-seeker-card">
+                        <div class="seeker-image">
+                            <img src="assets/img/seeker/icon2.png" alt="image">
+                        </div>
+                        <h3>Apply Jobs</h3>
+                        <div class="step">Step 3</div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="row pt-3">
                 <div class="col-lg-12">
                     <div class="hr-solution-content">
                         <div class="hr-solutions-item text-center">
@@ -618,7 +655,7 @@
                         <a href="#" class="theme-btn btn-md">HR Solution</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
