--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 <div class="award">
                                     2
                                 </div>
-                                <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
+                                <img src="assets/img/candi2.jpg" alt="" width="80px" height="80px">
                                 <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
@@ -231,7 +231,7 @@
                                 <div class="award">
                                     3
                                 </div>
-                                <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
+                                <img src="assets/img/candi3.jpg" alt="" width="80px" height="80px">
                                 <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
@@ -259,7 +259,7 @@
                                 <div class="award">
                                     2
                                 </div>
-                                <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
+                                <img src="assets/img/candi2.jpg" alt="" width="80px" height="80px">
                                 <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
@@ -272,7 +272,7 @@
                                 <div class="award">
                                     3
                                 </div>
-                                <img src="assets/img/candi1.webp" alt="" width="80px" height="80px">
+                                <img src="assets/img/candi3.jpg" alt="" width="80px" height="80px">
                                 <!-- <div class="h6 pt-3 pb-3">MD. Emam Hossain</div> -->
                                 <div class="number">855</div>
                                 <p class="pt-1 pb-1">Finance</p>
