--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                             The highest-quality candidates can be found here. <br /> In addition to your academic
                             results, we value your experience and expertise.
                         </div>
-                        <a href="leaderboard.html" class="theme-btn btn-md">Learn More</a>
+                        <a href="leaderboard.html" class="theme-btn btn-md text-primary bg-white">Learn More</a>
                     </div>
                 </div>
 
-                <div class="col-lg-6 align-self-center">
+                <div class="col-lg-5 offset-lg-1 align-self-center">
                     <div class="leader-slid owl-carousel owl-theme">
                         <div class="leader-item-content">
                             <div class="leader-item bg-white text-center p-3 py-4">
@@ -303,7 +303,7 @@
                         <div class="how-it-work-item">
                             <div class="number">1</div>
                             <div class="how-it-work-text">
-                                <div class="h2">Register for the Test</div>
+                                <div class="h2">Register For An Account</div>
                                 <div class="h5">Explore career opportunities and schedule a test as per your
                                     convenience.</div>
                             </div>
@@ -314,7 +314,7 @@
                         <div class="how-it-work-item">
                             <div class="number">2</div>
                             <div class="how-it-work-text">
-                                <div class="h2">Register for the Test</div>
+                                <div class="h2">Complete Your Profile</div>
                                 <div class="h5">Explore career opportunities and schedule a test as per your
                                     convenience.</div>
                             </div>
@@ -325,7 +325,7 @@
                         <div class="how-it-work-item">
                             <div class="number">3</div>
                             <div class="how-it-work-text">
-                                <div class="h2">Register for the Test</div>
+                                <div class="h2">Automatically Rank</div>
                                 <div class="h5">Explore career opportunities and schedule a test as per your
                                     convenience.</div>
                             </div>
@@ -336,7 +336,7 @@
                         <div class="how-it-work-item">
                             <div class="number">4</div>
                             <div class="how-it-work-text">
-                                <div class="h2">Register for the Test</div>
+                                <div class="h2">Get A Rank Boost By Taking Courses</div>
                                 <div class="h5">Explore career opportunities and schedule a test as per your
                                     convenience.</div>
                             </div>
@@ -358,7 +358,7 @@
                         <div class="h1 fw-bold">BD's Finest Companies <br> hire on Jobs</div>
                         <div class="h4 pt-4 pb-5">Over 300 Job Opportunities From More Than 50 Companies With CTCs Up to
                             15 LPA</div>
-                        <a href="#" class="theme-btn btn-md">Get Hired</a>
+                        <a href="#" class="theme-btn btn-md primary-bg">Get Hired</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
